--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build": "remix build",
     "dev": "remix dev",
     "postinstall": "remix setup node",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "type:check": "tsc -w --project tsconfig.json --pretty --noEmit"
   },
   "dependencies": {
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
-    "front-matter": "^4.0.2",
+    "esbuild": "^0.14.13",
     "invariant": "^2.2.4",
+    "mdx-bundler": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.3",
